# TradingEngine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  TradingEngineServer.sln  docker-compose.yml  interview_prep_combat_manual.md
ExecutionCoach/: AGENT_TRACKER.md  ARCHITECTURE.md  README.md  TrueMarkets_Report.aux  TrueMarkets_Report.out  TrueMarkets_Report.tex  TrueMarkets_Report.toc  run_demo.sh  schema.fbs  walkthrough.md
ExecutionCoach/backend/: main.py
ExecutionCoach/frontend/: package-lock.json  package.json  tailwind.config.mjs
ExecutionCoach/frontend/src/: App.tsx  index.css
ExecutionCoach/frontend/src/application/: useExecutionCoach.ts
ExecutionCoach/frontend/src/domain/: ExecutionCoachDomainService.ts  types.ts
ExecutionCoach/frontend/src/infrastructure/: MarketDataProvider.ts
ExecutionCoach/frontend/src/presentation/components/: QuotePanel.tsx  RecommendationCard.tsx  SettingsPanel.tsx
LiquidityIntelligence/: run_demo.sh  walkthrough.md
LiquidityIntelligence/backend/: CMakeLists.txt
LiquidityIntelligence/backend/src/: main.cpp
LiquidityIntelligence/frontend/: index.html  package-lock.json  package.json  tailwind.config.mjs
LiquidityIntelligence/frontend/src/: App.tsx  index.css
LiquidityIntelligence/frontend/src/components/: AppSidebar.tsx  ChartCarousel.tsx  ComparisonCharts.tsx  CompetitiveSnapshotCard.tsx  DepthComparisonCard.tsx  Header.tsx  HeaderBar.tsx  InfoTooltip.tsx  InsightEngine.tsx  InsightHero.tsx  InsightPanel.tsx  KpiStrip.tsx  LagTimelineCard.tsx  LegendPanel.tsx  MetricCard.tsx  OrderBook.tsx  OrderBookCard.tsx  ScoreCard.tsx  TrueMarketsLogo.tsx  VenueComparisonTable.tsx
LiquidityIntelligence/frontend/src/dashboard/: storage.ts  widgetRegistry.ts
LiquidityIntelligence/frontend/src/hooks/: useDashboardLayout.ts  useMetricAlerts.ts  useTrueMarketsWS.ts  useWebSocket.ts
LiquidityIntelligence/frontend/src/types/: index.ts
LiquidityIntelligence/frontend/src/utils/: executionAnalytics.ts  formatters.ts  metrics.ts
LiquidityIntelligence/report/: report.aux  report.out  report.tex
TradingEngine/: README.md  dotnet_20260317_154606.nettrace  load_test.py  locust_results_stats.csv  locust_results_stats_history.csv  locustfile.py  parse_trace.py  profiler.speedscope.json  profiler.speedscope.speedscope.json  run_custom_strategy.sh  run_demo.sh  test_single.py
TradingEngine/Benchmarks/: Benchmarks.csproj  Program.cs
TradingEngine/TradingEngineServer/: Program.cs  TradingEngineServer.Core.runtimeconfig.json  TradingEngineServer.csproj  appsettings.json
TradingEngine/TradingEngineServer.Tests/: EventLoggerTests.cs  OrderBookTests.cs  OrderRingBufferTests.cs  RedisServiceTests.cs  ReplayEngineTests.cs  TradingApiIntegrationTests.cs  TradingEngineBackgroundServiceTests.cs  TradingEngineServer.Tests.csproj  UnitTest1.cs
TradingEngine/TradingEngineServer.Tests/Poker/: HandEvaluatorTests.cs  PokerGameEngineTests.cs
TradingEngine/TradingEngineServer.Tests/TestResults/f8dddcdc-a13d-44dc-96ea-28ab33907bc7/: coverage.cobertura.xml
TradingEngine/TradingEngineServer/Hubs/: TradingHub.cs
TradingEngine/TradingEngineServer/Models/: EngineEvent.cs  Order.cs  OrderBookSnapshot.cs  OrderCore.cs  Trade.cs
TradingEngine/TradingEngineServer/Poker/Endpoints/: PokerEndpoints.cs
TradingEngine/TradingEngineServer/Poker/Models/: Card.cs  Deck.cs  HandRank.cs  PokerPlayer.cs  PokerRoom.cs
TradingEngine/TradingEngineServer/Poker/Services/: HandEvaluator.cs  PokerGameEngine.cs
TradingEngine/TradingEngineServer/Services/: EventLogger.cs  OrderBook.cs  OrderRingBuffer.cs  RedisService.cs  ReplayEngine.cs  TradingEngineBackgroundService.cs
TradingEngine/TradingEngineServer/TradingEnginveServerConfiguration/: TradingEngineServerConfiguration.cs
TradingEngine/cpp_backtester/: CMakeLists.txt
TradingEngine/cpp_backtester/src/: OrderBook.cpp  OrderBook.hpp  main.cpp  schema_generated.h
TradingEngine/data/: backtest_report.json  gemini_btcusd_candles_15m.csv  gemini_btcusd_candles_1day.csv  gemini_btcusd_candles_1hr.csv  gemini_btcusd_candles_6hr.csv  gemini_btcusd_orderbook.csv  gemini_ethusd_orderbook.csv  gemini_solusd_orderbook.csv
TradingEngine/docs/: DPDK_Architecture.md  test_suite_deep_dive.md
TradingEngine/frontend/: index.html  package-lock.json  package.json
TradingEngine/frontend/src/: App.tsx  PokerTable.tsx  index.css
TradingEngine/scripts/: ai_reviewer.py  ebpf_trace_tcp.py  fetch_gemini_data.py
include/: cli_utils.hpp  order.hpp  order_book.hpp  rest_server.hpp  trade.hpp  trade_log.hpp
snapshots/: mybook.json
src/: cli_utils.cpp  main.cpp  order.cpp  order_book.cpp  rest_server.cpp  trade.cpp  trade_log.cpp
tests/: test_order.cpp  test_order_book.cpp
(+9 files in other folders)
